--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "learning backend",
   "main": "index.js",
+  
   "dependencies": {
     "abbrev": "^1.1.1",
     "anymatch": "^3.1.3",
@@ -24,8 +25,8 @@
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "minimatch": "^3.1.2",
+    "mongodb": "^4.13.0",
     "ms": "^2.1.3",
-    "nodemon": "^2.0.20",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
@@ -39,7 +40,8 @@
     "undefsafe": "^2.0.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -50,5 +52,8 @@
   "bugs": {
     "url": "https://github.com/Sharmaryan/node-tut/issues"
   },
-  "homepage": "https://github.com/Sharmaryan/node-tut#readme"
+  "homepage": "https://github.com/Sharmaryan/node-tut#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
