--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon insert.js"
+    "start":"nodemon api.js"
   },
   "repository": {
     "type": "git",
