--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "learning backend",
   "main": "index.js",
-  
   "dependencies": {
     "abbrev": "^1.1.1",
     "anymatch": "^3.1.3",
@@ -26,6 +25,7 @@
     "is-number": "^7.0.0",
     "minimatch": "^3.1.2",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.8.2",
     "ms": "^2.1.3",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon api.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
