--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
